# template

./: CMakeLists.txt  README.md  enable_if.cpp  sum.cpp
cuda/: CMakeLists.txt  gemm.cc  kernel.cu  main.cc
cuda/include/: common.h  kernel.h
gemm/: CMakeLists.txt  gemm.cu  main.cc
gemm/include/: benchmark.h  common.h  gemm.cuh  gemm.h
include/: is_char.h  pow.h  sum.h
templates/: CMakeLists.txt  enable_if.cpp  is_char.cpp  pow.cpp
templates/include/: is_char.h  pow.h  remove_any.h  sum.h
